--- a/Assembly-CSharp-vs.csproj
+++ b/Assembly-CSharp-vs.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
      <Compile Include="Assets\ActionButton.cs" />
+     <Compile Include="Assets\Brain.cs" />
      <Compile Include="Assets\ClickButton.cs" />
      <Compile Include="Assets\Contadores.cs" />
      <Compile Include="Assets\Cuadricula.cs" />
@@ -60,7 +61,6 @@
      <Compile Include="Assets\Scripts Antiguos\Move.cs" />
      <Compile Include="Assets\Scripts Antiguos\Piedra.cs" />
      <Compile Include="Assets\Scripts Antiguos\UtilidadesHagi.cs" />
-     <Compile Include="Assets\Scripts\Brain.cs" />
      <Compile Include="Assets\Scripts\Buttons.cs" />
      <Compile Include="Assets\Scripts\Cerebro.cs" />
      <Compile Include="Assets\Scripts\Cuadriculaa.cs" />
